# pyStereo3D

./: .gitattributes  .gitignore  README.md  build.sh  publish.sh  version.txt
.github/workflows/: python-publish.yml  python-test.yml
SampleData/: deimos_left_calibration.xml  deimos_right_calibration.xml  deimos_stereo_calibration.xml  phobos_right.yaml  vrep_right.yaml
SampleData/deimos_cal/: right_calibration.xml  stereo_calibration.xml
SampleData/ideal_cal/: left.yaml
SampleData/output/: points.ply
SampleScripts/: sample_3D.py  sample_3D_marked.py  sample_3D_phobos.py  sample_capture.py
Stereo3D/: README.md  helper.py  sample_3D.py  setup.py  test_stereo3d.py
Stereo3D/Stereo3D/: StereoCalibration.py  __init__.py
Stereo3D/Stereo3D/StereoCapture/: ICCapture.py  StereoCaptureCVDual.py  StereoCaptureCVSplit.py  StereoCapturePylon.py  StereoCaptureVREP.py  VREPCapture.py  __init__.py
Stereo3D/Stereo3D/StereoCapture/coppeliasim/: __init__.py  sim.py
Stereo3D/Stereo3D/StereoMatch/: __init__.py
cppStereo3D/: .gitignore  README.md
cppStereo3D/Dep/opencv/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
cppStereo3D/Dep/opencv/lib/: libopencv_bgsegm.so.4.2.0  libopencv_bioinspired.so.4.2.0  libopencv_ccalib.so.4.2.0  libopencv_features2d.so.4.2.0  libopencv_freetype.so.4.2.0  libopencv_hfs.so.4.2.0  libopencv_highgui.so.4.2.0  libopencv_imgcodecs.so.4.2.0  libopencv_intensity_transform.so.4.2.0  libopencv_ml.so.4.2.0  libopencv_photo.so.4.2.0  libopencv_plot.so.4.2.0  libopencv_quality.so.4.2.0  libopencv_rapid.so.4.2  libopencv_rapid.so.4.2.0  libopencv_rgbd.so.4.2.0  libopencv_shape.so.4.2.0  libopencv_structured_light.so.4.2.0  libopencv_surface_matching.so.4.2.0  libopencv_tracking.so.4.2.0  libopencv_videostab.so.4.2.0  libopencv_xfeatures2d.so.4.2.0  libopencv_ximgproc.so.4.2.0  libopencv_xphoto.so.4.2.0
cppStereo3D/Dep/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake
cppStereo3D/SampleData/: deimos_right.yaml
cppStereo3D/SampleData/deimos_cal/: left_calibration.xml  right.yaml
cppStereo3D/Stereo3D/: .gitignore  CMakeLists.txt  README.md  stereo3d-0.1.1-Linux.deb
cppStereo3D/Stereo3D/Stereo3D/src/: Stereo3D.cpp
cppStereo3D/Stereo3D/Stereo3D/src/todo/StereoCapture/: CVCapture.cpp  CVImageCapture.cpp  CVImageFolderCapture.cpp  ICCapture.cpp  StereoCapture.cpp  StereoCaptureCVSplit.cpp  StereoCapturePylon.cpp  TIS.cpp
cppStereo3D/Stereo3D/example_external/: CMakeLists.txt  example.cpp
cppStereo3D/Stereo3D/example_internal/: example.cpp
cppStereo3D/Stereo3D/include/: Stereo3D.h
cppStereo3D/Stereo3D/src/: Stereo3D.cpp
cppStereo3D/Stereo3D/src/todo/: StereoCalibration.cpp
cppStereo3D/Stereo3D/src/todo/StereoCapture/: PylonCapture.cpp  StereoCaptureCVDual.cpp
cppTemplatePackage/: README.md
pyStereo3D/: README.md
pyStereo3D/SampleData/: left.yaml  phobos_left.yaml
pyStereo3D/SampleData/deimos_cal/: left.yaml
pyStereo3D/SampleScripts/: sample_3D.py  sample_capture.py  sample_script.py
pyStereo3D/Stereo3D/: LICENSE  README.md  sample.py  sample_3D.py  sample_capture.py  setup.py
pyStereo3D/Stereo3D/Stereo3D/: StereoCalibration.py  __init__.py
pyStereo3D/Stereo3D/Stereo3D/StereoCapture/: CVCapture.py  CVImageCapture.py  CVImageFolderCapture.py  ICCapture.py  PylonCapture.py  StereoCaptureCVDual.py  StereoCaptureCVSplit.py  StereoCapturePylon.py  StereoCaptureVREP.py  VREPCapture.py  __init__.py
pyStereo3D/Stereo3D/Stereo3D/StereoCapture/coppeliasim/: __init__.py  sim.py
pyTemplatePackage/TemplatePackage/: README.md  setup.py
pyTemplatePackage/TemplatePackage/TemplatePackage/: __init__.py
sample_data/: deimos_left.yaml  deimos_left_calibration.xml  deimos_right.yaml  deimos_right_calibration.xml  deimos_stereo_calibration.xml  phobos_left.yaml  phobos_right.yaml  vrep_left.yaml
sample_data/deimos_cal/: left.yaml  left_calibration.xml  right.yaml  right_calibration.xml  stereo_calibration.xml
sample_data/ideal_cal/: right.yaml
samples/: sample_3D.py  sample_3D_marked.py  sample_3D_phobos.py  sample_capture.py
stereo3d/: .gitignore  helper.py  requirements.txt  setup.py  test_stereo3d.py
stereo3d/stereo3d/: __init__.py  stereocalibration.py
stereo3d/stereo3d/stereocapture/: __init__.py  cvcapture.py  cvimagecapture.py  cvimagefoldercapture.py  iccapture.py  pyloncapture.py  stereocapturecvdual.py  stereocapturecvsplit.py  stereocapturepylon.py  stereocapturevrep.py  tis.py  vrepcapture.py
stereo3d/stereo3d/stereocapture/coppeliasim/: __init__.py  sim.py  simConst.py
